// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dataStorageRepository getAll returns expected snapshot 1`] = `
Array [
  Object {
    "name": "Storage 1",
  },
  Object {
    "name": "Storage 2",
  },
]
`;

exports[`dataStorageRepository getAllByName returns expected snapshot 1`] = `
Object {
  "name": "Storage 1",
}
`;

exports[`dataStorageRepository getById returns expected snapshot 1`] = `
Object {
  "name": "Storage 1",
}
`;
